--- a/editor/config.json
+++ b/editor/config.json
@@ -2,13 +2,13 @@
 
 "notty":
 [{
-	"version": "1.2a1",
+	"version": "1.2b1",
 	"theme": "dark",
-	"color-scheme": "standart",
 
 	"menu": "true",
 	"panel": "true",
-	"lines": "true"
+	"lines": "true",
+	"explorer": "false"
 }]
 
 }
